# baybayin

./: .clang-format  CMakeLists.txt  README.md  conanfile.py
cmake/: utils.cmake
examples/: tagalog.txt
include/: CMakeLists.txt  baybayin.h
include/baybayin-core/: norm.h  tl.h
include/baybayin-core/norm/: consonants.h  vowels.h
include/baybayin-core/util/: util.h
src/: CMakeLists.txt  main.cpp  norm.cpp  tl.cpp
src/include/: utils.h
test/: CMakeLists.txt  test_baybayin.cpp  unit_tests.cpp  unit_tests.h
tests/: CMakeLists.txt  norm_tests.cpp  tl_tests.cpp
tests/include/: tl_tests.h
