cmake_minimum_required(VERSION 3.20)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
project(baybayin-core)
add_subdirectory(include)
add_subdirectory(src)
add_subdirectory(tests)
#find_program(CPPLINT_EXE NAMES cpplint)
#if(CPPLINT_EXE)
#    message(STATUS "cpplint found: ${CPPLINT_EXE}")
#    set(CMAKE_CXX_CPPLINT ${CPPLINT_EXE} --filter=-whitespace/braces)
#else()
#    message(WARNING "cpplint not found! Please install it via 'pip install cpplint'")
#endif()